Fixed styles.css for better readability

--- a/styles.css
+++ b/styles.css
@@ -308,7 +308,7 @@ footer {
   transition: 0.5s;
 }
 
-#finalbutton span:after {
+#finalbutton span::after {
   content: '\00bb';
   position: absolute;
   opacity: 0;
@@ -319,14 +319,13 @@ footer {
 
 #finalbutton:hover span {
   padding-right: 25px;
-  
 }
 
 #finalbutton:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
-#finalbutton:hover span:after {
+#finalbutton:hover span::after {
   opacity: 1;
   right: 0;
 }
